vendor/pin-project-1.0.7/tests/ui/pinned_drop/forget-pinned-drop-impl.rs
use pin_project::pin_project;

#[pin_project(PinnedDrop)] //~ ERROR E0277
struct Struct {
    #[pin]
    f: u8,
}

fn main() {}
